# watcher

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  lib.rs  main.rs  runner.rs  watcher.rs
tests/: integration_test.rs
