[package]
name = "watchr"
version = "0.1.0"
edition = "2024"
description = "Cross-platform CLI file watcher that re-runs a command on every file change"
license = "MIT"
repository = "https://github.com/CurroRodriguez/watcher"

[dependencies]
clap = { version = "4", features = ["derive"] }
notify = "6"
globset = "0.4"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
