[package]
name = "iwatchr"
version = "0.1.1"
edition = "2024"
description = "Cross-platform CLI file watcher that re-runs a command on every file change"
license = "MIT"
repository = "https://github.com/CurroRodriguez/iwatcher"

[dependencies]
clap = { version = "4", features = ["derive"] }
notify = "6"
globset = "0.4"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
